# Eidon

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  MVP_ANALYSIS.md  README.md  fly.toml  pyproject.toml  pytest.ini
app/: main.py
app/api/: routes_assembly.py  routes_build.py  routes_export.py  routes_fea.py  routes_mesh.py  routes_service.py  schemas.py
app/core/: auth.py  builder.py  ir.py  profile_detection.py
app/schemas/: README.md  __init__.py  generator.py
app/schemas/v1/: mesh.schema.json  part_ir.schema.json  sketch_ir.schema.json
backend/: README.md  default.dsl  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_agent.py  routes_analysis.py  routes_drawing.py  routes_export.py  routes_import.py  routes_models.py  routes_operations.py  routes_selection.py  routes_sketch.py  routes_templates.py
backend/app/core/: agent_intent.py  analysis.py  builder.py  drawing.py  dsl_generator.py  dsl_parser.py  dsl_store.py  edits.py  geometry_utils.py  ir.py  llm_agent.py  llm_agent_handlers.py  operations.py
backend/app/generators/: __init__.py  pattern_generators.py
backend/app/schemas/: generator.py
backend/app/schemas/v1/: part_ir.schema.json
backend/tests/: test_analysis.py  test_dsl_parser.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_assembly.py  test_build.py  test_drawing.py  test_export.py  test_fea.py  test_import.py  test_mesh.py  test_selection.py  test_service.py  test_sketch.py
(+19 files in other folders)
