[project]
name = "eidos"
version = "0.1.0"
description = "Eidos Geometry Service - Parametric CAD geometry operations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cadquery>=2.4.0",
    "sympy>=1.12.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
eidos = "app.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = {find = {include = ["app*"], exclude = ["tests*", "eidos*"]}}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

