[project]
name = "eidos-backend"
version = "0.1.0"
description = "Parametric CAD system backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "cadquery>=2.4.0",
    "sympy>=1.12.0",
    "lark>=1.1.0",
    "python-multipart>=0.0.6",
    "pytest>=7.4.0",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools]
packages = {find = {include = ["app*"], exclude = ["tests*", "eidos*"]}}

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

